<resources>
    <string name="app_name">Binge</string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Action">Action</string>
    <string name="Thriller">Thriller</string>
    <string name="Comedy">Comedy</string>
    <string name="Horror">Horror</string>
    <string name="Romance">Romance</string>
    <string name="Sci_fi">Scifi</string>
    <string name="Animation">Animation</string>
    <string name="start_binging">Start Binging</string>
    <string name="todo">TODO</string>
</resources>
